--- a/spectec/tutorial/tutorial.tex
+++ b/spectec/tutorial/tutorial.tex
@@ -74,7 +74,6 @@ var t : valtype
 rule Step/example:
   z; (CONST t c_1) (CONST t c_2)  ~>  z; (CONST t c_1)
 \end{lcverbatim}
-
 we can write like this:
 \begin{lcverbatim}
 rule Step/example:
@@ -87,25 +86,31 @@ rule Step/example:
 \end{lcverbatim}
 
 \subsection{Relation Declarations}
-Relation declarations, defining the shape of judgement forms, such as typing or reduction relations. These are essentially type declarations for the meta language. For example:
+Relation declarations, defining the shape of judgement forms, such as typing or reduction relations. These are essentially type declarations for the meta language. \\
+Below is a general form of relation, which is quite brief:
 \begin{lcverbatim}
-relation Instr_ok: context |- instr : functype
-relation Step: config ~> config
+relation <name_of_relation>: <content_of_relation>
 \end{lcverbatim}
-%\begin{lcverbatim}
-%relation <name_of_relation>: context |- <type> : <type>
-%relation <name_of_relation>: <type> ~> <type>
-%\end{lcverbatim}
-(TODO: more explanation with examples)
+Content of relation may vary. For example, general form of typing relation will be:
+\begin{lcverbatim}
+relation <name_of_relation>: <type_of_context> |- <type> : <type>
+\end{lcverbatim}
+or, general form of reduction relation will be:
+\begin{lcverbatim}
+relation <name_of_relation>: <type> ~> <type>
+\end{lcverbatim}
+%You will see how relations work in Section 5 and 6.
 
 \subsection{Rule Definitions}
 \begin{lcverbatim}
 rule <name_of_relation>/<name_of_rule>:
   <content_of_rule>
+  -- <name_of_other_relation>: <premise>
+  -- if <condition>
 \end{lcverbatim}
 We can define the individual rules for each relation as above. \K{<content\_of\_rule>} has different form, depending on its relation.
-Every rule is named, so that it can be referenced. Each premise is introduced by a dash and includes the name of the relation it is referencing, easing checking and processing. \\
-(TODO: more explanation with examples)
+Every rule is named, so that it can be referenced. \\
+You can add premises by including the name of referenced relation, and conditions using keyword \K{if}.\\
 
 \subsection{Auxiliary Functions}
 \begin{lcverbatim}
@@ -191,6 +196,7 @@ $$
 $$
 \begin{array}{@{}lrrl@{}l@{}}
 	\mbox{(function type)} & {\mathit{functype}} &::=& {{\mathit{valtype}}^\ast} \rightarrow {{\mathit{valtype}}^\ast} \\
+	\mbox{(result type)} & {\mathit{resulttype}} &::=& {{\mathit{valtype}}^?} \\
 	\mbox{(external type)} & {\mathit{externtype}} &::=& \mathsf{func}~{\mathit{functype}} \\
 \end{array}
 $$
@@ -753,7 +759,255 @@ var loc : local
 var ex : export
 var xx : externidx
 \end{lcverbatim}
-(TODO: add validation rules)
+
+\subsection{Context}
+Define \K{context} and its metavariable as below:
+\begin{lcverbatim}
+syntax context hint(desc "context") =
+{ TYPES functype*, FUNCS functype*, 
+  LOCALS valtype*, LABELS resulttype*, RETURN resulttype? }
+
+var C : context
+\end{lcverbatim}
+
+\subsection{Types}
+\begin{lcverbatim}
+relation Functype_ok: |- functype : OK
+relation Externtype_ok: |- externtype : OK
+\end{lcverbatim}
+
+\subsubsection{\K{Functype\_ok}}
+\begin{lcverbatim}
+rule Functype_ok:
+  |- t_1* -> t_2? : OK
+\end{lcverbatim}
+
+\subsubsection{\K{Externtype\_ok/func}}
+\begin{lcverbatim}
+rule Externtype_ok/func:
+  |- FUNC functype : OK
+  -- Functype_ok: |- functype : OK
+\end{lcverbatim}
+
+\subsection{Subtyping}
+\begin{lcverbatim}
+relation Functype_sub: |- functype <: functype
+relation Externtype_sub: |- externtype <: externtype
+\end{lcverbatim}
+
+\subsubsection{\K{Functype\_sub}}
+\begin{lcverbatim}
+rule Functype_sub:
+  |- ft <: ft
+\end{lcverbatim}
+  
+\subsubsection{\K{Externtype\_sub/func}}
+\begin{lcverbatim}
+rule Externtype_sub/func:
+  |- FUNC ft_1 <: FUNC ft_2
+  -- Functype_sub: |- ft_1 <: ft_2
+\end{lcverbatim}
+
+\subsection{Instructions}
+\begin{lcverbatim}
+relation Instr_ok: context |- instr : functype
+relation Instrs_ok: context |- instr* : functype
+relation Expr_ok: context |- expr : resulttype
+\end{lcverbatim}
+
+\subsubsection{\K{Expr\_ok}}
+\begin{lcverbatim}
+rule Expr_ok:
+  C |- instr* : t?
+  -- Instrs_ok: C |- instr* : eps -> t?
+  rule Instrs_ok/empty:
+  C |- eps : eps -> eps
+\end{lcverbatim}
+
+\subsubsection{\K{Instrs\_ok/seq}}
+\begin{lcverbatim}
+rule Instrs_ok/seq:
+  C |- instr_1 instr_2* : t_1* -> t_3*
+  -- Instr_ok: C |- instr_1 : t_1* -> t_2*
+  -- Instrs_ok: C |- instr_2 : t_2* -> t_3*
+\end{lcverbatim}
+
+\subsubsection{\K{Instrs\_ok/frame}}
+\begin{lcverbatim}
+rule Instrs_ok/frame:
+  C |- instr* : t* t_1* -> t* t_2*
+  -- Instrs_ok: C |- instr* : t_1* -> t_2*
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/nop}}
+\begin{lcverbatim}
+rule Instr_ok/nop:
+  C |- NOP : eps -> eps
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/drop}}
+\begin{lcverbatim}
+rule Instr_ok/drop:
+  C |- DROP : t -> eps
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/select}}
+\begin{lcverbatim}
+rule Instr_ok/select:
+  C |- SELECT : t t I32 -> t
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/block}}
+\begin{lcverbatim}
+rule Instr_ok/block:
+  C |- BLOCK (eps -> t?) instr* : eps -> t?
+  -- Instrs_ok: C, LABELS (t?) |- instr* : eps -> t?
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/loop}}
+\begin{lcverbatim}
+rule Instr_ok/loop:
+  C |- LOOP (eps -> t?) instr* : eps -> t?
+  -- Instrs_ok: C, LABELS (eps) |- instr* : eps -> eps
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/if}}
+\begin{lcverbatim}
+rule Instr_ok/if:
+  C |- IF (eps -> t?) instr_1* ELSE instr_2* : I32 -> t?
+  -- Instrs_ok: C, LABELS (t?) |- instr_1* : eps -> t?
+  -- Instrs_ok: C, LABELS (t?) |- instr_2* : eps -> t?
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/br}}
+\begin{lcverbatim}
+rule Instr_ok/br:
+  C |- BR l : t_1* t? -> t_2*
+  -- if C.LABELS[l] = t?
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/br\_if}}
+\begin{lcverbatim}
+rule Instr_ok/br_if:
+  C |- BR_IF l : t? I32 -> t?
+  -- if C.LABELS[l] = t?
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/call}}
+\begin{lcverbatim}
+rule Instr_ok/call:
+  C |- CALL x : t_1* -> t_2?
+  -- if C.FUNCS[x] = t_1* -> t_2?
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/return}}
+\begin{lcverbatim}
+rule Instr_ok/return:
+  C |- RETURN : t_1* t? -> t_2*
+  -- if C.RETURN = t?
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/const}}
+\begin{lcverbatim}
+rule Instr_ok/const:
+  C |- CONST t c_t : eps -> t
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/binop}}
+\begin{lcverbatim}
+rule Instr_ok/binop:
+  C |- BINOP t binop_t : t t -> t
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/local.get}}
+\begin{lcverbatim}
+rule Instr_ok/local.get:
+  C |- LOCAL.GET x : eps -> t
+  -- if C.LOCALS[x] = t
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_ok/local.set}}
+\begin{lcverbatim}
+rule Instr_ok/local.set:
+  C |- LOCAL.SET x : t -> eps
+  -- if C.LOCALS[x] = t
+\end{lcverbatim}
+
+\subsection{Constant Expressions}
+\begin{lcverbatim}
+relation Instr_const: context |- instr CONST
+relation Expr_const: context |- expr CONST
+relation Expr_ok_const: context |- expr : valtype? CONST
+\end{lcverbatim}
+
+\subsubsection{\K{Instr\_const/const}}
+\begin{lcverbatim}
+rule Instr_const/const:
+  C |- (CONST t c) CONST
+\end{lcverbatim}
+
+\subsubsection{\K{Expr\_const}}
+\begin{lcverbatim}
+rule Expr_const:
+  C |- instr* CONST
+  -- (Instr_const: C |- instr CONST)*
+\end{lcverbatim}
+
+\subsubsection{\K{Expr\_ok\_const}}
+\begin{lcverbatim}
+rule Expr_ok_const:
+  C |- expr : t? CONST
+  -- Expr_ok: C |- expr : t?
+  -- Expr_const: C |- expr CONST
+\end{lcverbatim}
+
+\subsection{Modules}
+\begin{lcverbatim}
+relation Type_ok: |- type : functype
+relation Func_ok: context |- func : functype
+relation Export_ok: context |- export : externtype
+relation Externidx_ok: context |- externidx : externtype
+relation Module_ok: |- module : OK
+\end{lcverbatim}
+
+\subsubsection{\K{Type\_ok}}
+\begin{lcverbatim}
+rule Type_ok:
+  |- TYPE ft : ft
+  -- Functype_ok: |- ft : OK
+\end{lcverbatim}
+
+\subsubsection{\K{Func\_ok}}
+\begin{lcverbatim}
+rule Func_ok:
+  C |- FUNC x (LOCAL t)* expr : t_1* -> t_2?
+  -- if C.TYPES[x] = t_1* -> t_2?
+  -- Expr_ok: C, LOCALS t_1* t*, LABELS (t_2?), RETURN (t_2?) |- expr : t_2?
+\end{lcverbatim}
+
+\subsubsection{\K{Export\_ok}}
+\begin{lcverbatim}
+rule Export_ok:
+  C |- EXPORT name externidx : xt
+  -- Externidx_ok: C |- externidx : xt
+\end{lcverbatim}
+  
+\subsubsection{\K{Externidx\_ok/func}}
+\begin{lcverbatim}
+rule Externidx_ok/func:
+  C |- FUNC x : FUNC ft
+  -- if C.FUNCS[x] = ft
+\end{lcverbatim}
+
+\subsubsection{\K{Module\_ok}}
+\begin{lcverbatim}
+rule Module_ok:
+  |- MODULE type* func* export* : OK
+  -- (Type_ok: |- type : ft')*
+  -- (Func_ok: C |- func : ft)*
+  -- (Export_ok: C |- export : xt)*
+  -- if C = {TYPES ft'*, FUNCS ift* ft*}
+\end{lcverbatim}
 
 \section{Reduction Rules}
 Now, let's write the reduction rules for the instructions.
