Implement LaTeX backend for lemmagen

--- a/spectec/test-latex/spec-gen-wasm-1.0.tex
+++ b/spectec/test-latex/spec-gen-wasm-1.0.tex
@@ -2,7 +2,12 @@
 
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{amsthm}
 \usepackage{color}
+\usepackage{breqn}
+
+\newtheorem{theorem}{Theorem}
+\newtheorem{lemma}{Lemma}
 
 \hyphenation{Web-Assembly}
 
