Add TODO comments

--- a/spectec/test-latex/spec-gen-wasm-1.0.tex
+++ b/spectec/test-latex/spec-gen-wasm-1.0.tex
@@ -4,6 +4,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{color}
+% TODO: (lemmagen) Remove this package once line breaks are handled
 \usepackage{breqn}
 
 \newtheorem{theorem}{Theorem}
